Fix Timeline section mobile layout alignment

--- a/src/components/TimelineSection.css
+++ b/src/components/TimelineSection.css
@@ -117,7 +117,7 @@
   .timeline-item {
     width: 100%;
     text-align: left;
-    padding-left: 3rem !important;
+    padding-left: 60px !important;
     padding-right: 0 !important;
   }
   
